codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_wide.snap
---
source: tui/src/keymap_setup.rs
assertion_line: 1205
expression: "render_picker(params, 120)"
---

  Keymap
  All configurable shortcuts.
  112 actions, 0 customized, 2 unbound.

  [All]  Common  Customized (0)  Unbound (2)  App  Composer  Editor  Vim  Navigation  Approval  Debug

  Type to search shortcuts
› Global         Open Transcript              ctrl-t
  Global         Open External Editor         ctrl-g
  Global         Copy                         ctrl-o
  Global         Clear Terminal               ctrl-l
  Global       - Toggle Vim Mode              unbound
  Global         Toggle Raw Output            alt-r
  Chat           Interrupt Turn               esc
  Chat           Decrease Reasoning Effort    alt-,, shift-down

  left/right group · enter edit shortcut · * custom · - unbound · esc close
